--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Signika&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -6,4 +7,14 @@
 
 .inkut-font {
   font-family: "Inknut Antiqua", serif;
+}
+
+body {
+  font-family: "Signika", sans-serif;
+}
+
+.banner {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
