--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Yatra+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald&family=Signika&display=swap");
 
 @tailwind base;
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 .inkut-font {
-  font-family: "Inknut Antiqua", serif;
+  font-family: "Yatra One", serif;
 }
 
 body {
